[project]
name = ubuildingtoolkit
version = 0.0.1
author = Frederic Mueller
author_email = fredericmueller@gmx.net
description = Implements different classes for building and hypertuning unet-like neural network structures
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muellerFrederic/unet-building-toolkit
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
packages = find:
python_requires = >=3.8
include_package_data = True
dependencies = [
    'tensorflow>=2.4'
]